# game-engine

./: .clang-format  .clangd  CMakeLists.txt  Makefile  README.md
src/: Constants.h  Main.cpp
src/Display/: Display.cpp  Display.h  DisplayManager.cpp  DisplayManager.h
src/Entity/: Camera.cpp  Camera.h  Entity.h  EntityManager.cpp  EntityManager.h  Light.h  Player.cpp  Player.h
src/Floor/: Floor.cpp  Floor.h
src/Loader/: Loader.cpp  Loader.h  OBJLoader.cpp  OBJLoader.h  ObjLoader.cpp  ObjLoader.h
src/Model/: RawModel.cpp  RawModel.h  TexturedModel.h
src/Renderer/: EntityRenderer.cpp  EntityRenderer.h  MasterRenderer.cpp  MasterRenderer.h  TerrainRenderer.cpp  TerrainRenderer.h
src/Shader/: EntityFragmentShader.txt  EntityVertexShader.txt  ShaderProgram.cpp  ShaderProgram.h  StaticShader.cpp  StaticShader.h  TerrainFragmentShader.txt  TerrainShader.cpp  TerrainShader.h  TerrainVertexShader.txt  fragmentShader.txt  terrainFragmentShader.txt  terrainVertexShader.txt  vertexShader.txt
src/Skybox/: SkyboxFragmentShader.txt  SkyboxRenderer.cpp  SkyboxRenderer.h  SkyboxShader.cpp  SkyboxShader.h  SkyboxVertexShader.txt  skyboxFragmentShader.txt  skyboxVertexShader.txt
src/Terrain/: Terrain.cpp  Terrain.h
src/Texture/: ModelTexture.h  TerrainTexture.cpp  TerrainTexture.h  TerrainTexturePack.cpp  TerrainTexturePack.h  TextureData.h
src/Utils/: Math.cpp  Math.h  RNG.h
